--- a/src/components/ui/Button/index.module.css
+++ b/src/components/ui/Button/index.module.css
@@ -5,19 +5,46 @@
   align-items: 'center';
 }
 
+.childrenContainer {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  display: flex;
+  align-items: center;
+  margin-left: 16px;
+}
+
 .button {
   display: flex;
   flex-grow: 1;
   justify-content: center;
+  align-items: center;
   vertical-align: middle;
   background-color: #65d36e;
-  border-radius: 48px;
+  border-radius: 30px;
   border: none;
   padding: 16px 24px;
   font-family: Open Sans;
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
+  max-width: 100%;
+}
+
+.small {
+  font-size: 16px;
+}
+
+.medium {
+  font-size: 20px;
+}
+
+.large {
+  font-size: 24px;
 }
 
 .primary {
@@ -27,8 +54,8 @@
 
 .secondary {
   background-color: black;
-  color: green;
-  box-shadow:0px 0px 0px 2px green inset;
+  color: #65D36E;
+  box-shadow:0px 0px 0px 1px #65D36E inset;
 }
 
 .button:disabled {
