--- a/src/pages/RequestPage/index.module.css
+++ b/src/pages/RequestPage/index.module.css
@@ -16,21 +16,12 @@
 }
 
 .body {
-  margin-top: 50px;
-  display: inline;
-  width: 40%;
-  min-width: 480px;
-  /* height: 70%; */
-  min-width: 580px;
-  height: 66%;
-  min-height: 480px;
-  align-items: center;
-  align-content: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
-
 .flowBox {
-  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -46,19 +37,20 @@
   align-items: center;
   flex: 1;
   flex-grow: 1;
-  height: 110px;
 }
 
 .title {
-  margin-top: 50px;
-  height: 50px;
   align-items: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   flex: 1;
   flex-grow: 1;
-  height: 40px;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 16px;
+  padding: 16px;
 }
 
 .step {
@@ -98,4 +90,5 @@
   font-size: 22px;
   font-weight: 600;
   color: #FFFFFF;
+  text-align: center;
 }
