--- a/src/pages/AuthPage/index.module.css
+++ b/src/pages/AuthPage/index.module.css
@@ -2,17 +2,45 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .left {
   width: 50%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 530;
+  color: white;
+  text-align: center;
+}
+
+.logo {
+  width: auto;
+  height: auto;
+  content: url("/public/images/oak-white-big.png");
+}
+
+.title {
+  font-size: 72px;
+}
+
+.subtitle {
+  font-size: 24px;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 .right {
   width: 50%;
-  height: 100%
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .loginContiner {
@@ -24,7 +52,8 @@
 .loginbody {
   display: inline;
   text-align: center;
-  
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 .link {
@@ -41,7 +70,7 @@
 }
 
 .line {
-  margin-top: 10%;
+  margin-top: 24px;
 }
 
 
