--- a/src/components/flowBox/index.module.css
+++ b/src/components/flowBox/index.module.css
@@ -62,9 +62,9 @@
 }
 
 .greenarrow {
-    margin-left: 13px;
-    margin-right: 13px;
     content: url("/public/images/arrow-flow.png");
+    width: 90%;
+    max-width: 240px;
 }
 
 .greyarrow {
