--- a/src/pages/LandingPage/index.module.css
+++ b/src/pages/LandingPage/index.module.css
@@ -1,129 +1,54 @@
-.main {
+.container {
+    display: flex;
+    color: white;
+    justify-content: center;
+}
+
+.left {
+    position: relative;
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    justify-content: center;
     align-items: center;
-    flex: 1;
-    flex-grow: 1;
-    width: 100%;
-    height: 2000px;
-    background: #222429;
-  }
+    background: url("/public/images/login-page.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: center;
+}
 
-.body {
-    margin-top: 50px;
-    display: inline;
-    width: 30%;
-    min-width: 480px;
-    /* height: 70%; */
-    min-width: 580px;
-    height: 66%;
-    min-height: 480px;
+.right {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
     align-items: center;
-    align-content: center;
+    text-align: center;
 }
 
 .logo {
-    position: absolute;
-    left: 20px;
-    top: 20px;
+    width: 60px;
+    height: auto;
+    content: url("/public/images/oak-white-big.png");
 }
 
-.flowBox {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex: 1;
-    flex-grow: 1;
-    height: 120px;
- }
-
- .text {
-    margin-top: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex: 1;
-    flex-grow: 1;
-    height: 120px;
- }
-
-.button {
-    display: 'flex';
-    align-items: 'center';
-    flex-direction: 'column';
+.projectOakLogo {
+    width: 60px;
+    height: auto;
+    content: url("/public/images/oak-white-big.png");
 }
-
-.text5 {
-    text-align: center;
-    margin-top: 10%;
-    color: #808080;
-  }
-  
 
 .title {
-    margin-top: 50px;
-    height: 50px;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex: 1;
-    flex-grow: 1;
-    height: 40px;
-}
-
-.word1 {
-    display: flex;
-    flex-direction: row;
-    font-style: normal;
-    font-size: 24px;
-    font-weight: 600;
-    color: #acacac;
+    font-size: 72px;
 }
   
-.word2 {
-    margin-left: 5px;
-    color: #ffffff;
+.subtitle {
+    font-size: 24px;
 }
 
-.footer {
-   width: 54%;
-}
-
-.box {
-    min-width: 480px;
-    /* height: 70%; */
-    min-width: 380px;
-    height: 177px;
-    text-align: center;
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
-    /* or 125% */
-
-    text-align: center;
-
-}
-
-.line1 {
-    color: #FFFFFF;
-    margin-bottom: 12px;
-}
-
-.line2 {
-    margin-left: 10%;
-    width: 80%;
-    color: #ACACAC;;
-}
-
-.line3 {
-    margin-top: 20px;
-    color: #ACACAC;;
-}
-
-body {
-    background-color: #222429;
+.loginTitle {
+    font-size: 36px;
 }
