--- a/src/components/requestItem/index.module.css
+++ b/src/components/requestItem/index.module.css
@@ -34,9 +34,18 @@
     color: #FFFFFF;
 }
 
+.dot {
+    position: absolute;
+    margin-top: 7px;
+    width: 8px;
+    height: 8px;
+    border-radius: 4px;
+    background: #FFEA79;
+}
+
 .brief {
     margin-top: 18px;
-    padding-left: 6px;
+    padding-left: 0px;
     width: 56%;
     font-family: Open Sans;
     font-style: normal;
