--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -47,3 +47,12 @@
     height: 30px;
     color: #FFFFFF;
 }
+
+.menuContiner {
+    position: absolute;
+    top: 25px;
+    right: 10px;
+    width: 130px;
+    height: 30px;
+    color: #FFFFFF;
+}
