--- a/src/components/header/logoutButton/index.module.css
+++ b/src/components/header/logoutButton/index.module.css
@@ -12,6 +12,7 @@
 
 .dropdown {
   margin-left: 30px;
+  float: right;
   position: absolute;
 }
 
@@ -23,6 +24,8 @@
 }
   
 .dropbtn .buttontext {
+    margin-left: 5px;
+    margin-top: 3px;
     font-family: Open Sans;
     color: white;
     font-weight: 600;
@@ -30,29 +33,32 @@
 }
 
 .arrowdown {
-    margin-top: 10px;
+    margin-top: 12px;
     margin-left: 7px;
     content: url("/public/images/arrow-down.png");
 }
     
 .dropdown .dropdowncontent {
     display: none;
-    min-width: 160px;
+    position: absolute;
+    right: 0;
     box-shadow: 100x 280px 260px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
     
 .dropdowncontent .dropdownbutton {
+    right: 0px;
     margin-left: 0px;
     background-color: transparent;
     border: none;
 }
 
 .dropdownbutton .doprdownbuttontext {
+    right: 0px;
     font-family: Open Sans;
     color: white;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 20px;
 }
   
 .dropdowncontent .dropdownbutton:hover {
